[F] fix word-wrap for long url

--- a/static/custom.css
+++ b/static/custom.css
@@ -3,6 +3,7 @@
 }
 
 .link {
+    word-wrap: break-word;
 }
 
 .link a {
